unpackaged/main/default/objects/Fellow_Application__c/fields/AccessToAVehicleThisSummer__c.field-meta.xml
<CustomField>
    <fullName>AccessToAVehicleThisSummer__c</fullName>
    <label>Access to a vehicle this summer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes (own)</fullName>
            </value>
            <value>
                <fullName>Yes (will rent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>