unpackaged/main/default/objects/Fellow_Application__c/fields/Allowed_To_Submit_After_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Allowed_To_Submit_After_Deadline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allowed To Submit After Deadline</label>
    <type>Checkbox</type>
</CustomField>