unpackaged/main/default/objects/Fellow_Application__c/fields/Applicant_display_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Applicant_display_of_interest__c</fullName>
    <label>Stars Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>