unpackaged/main/default/objects/Fellow_Application__c/fields/Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_First_Name__c</fullName>
    <formula>Applicant__r.FirstName</formula>
    <label>Applicant First Name</label>
    <type>Text</type>
</CustomField>