unpackaged/main/default/objects/Fellow_Application__c/fields/Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Last_Name__c</fullName>
    <formula>Applicant__r.LastName</formula>
    <label>Applicant Last Name</label>
    <type>Text</type>
</CustomField>