unpackaged/main/default/objects/Fellow_Application__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <formula>Applicant__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Phone</label>
    <type>Text</type>
</CustomField>