unpackaged/main/default/objects/Fellow_Application__c/fields/Applicant_Score_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Score_Criteria__c</fullName>
    <formula>CASE(Scale_Data_Analysis_Experience__c, "Advanced", 3, "Intermediate", 2, "Beginner", 1, 0)+

CASE(Scale_Relevant_Degree__c, "Specialized graduate degree", 3, "Graduate degree with concentration or certifications", 2, "Undergraduate or light course work", 1, 0) +

CASE(Scale_Project_Mgmt_Consulting__c, "Advanced", 3, "Intermediate", 2, "Beginner", 1, 0) +

CASE(Scale_Project_Type_Experience__c, "2+ years", 3, "1-2 years", 2, "6 months-1 year", 1, 0) +

CASE(Scale_Leadership__c, "Experienced", 1, 0) +

CASE(Scale_Written_Communication_Enthusiasm__c, "Sufficient",1,0) +

CASE(Scale_Engineering_Experience__c, "Advanced", 3, "Intermediate", 2, "Beginner", 1, 0) +

CASE(Scale_Extracurricular_Env_Experience__c, "Yes",1,0) +

CASE(Applicant_Score_Adjustment__c, "+4", 4, "+3", 3, "+2", 2, "+1",1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Score Criteria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>