unpackaged/main/default/objects/Fellow_Application__c/fields/Apply_for_China_Fellowship_as_well__c.field-meta.xml
<CustomField>
    <fullName>Apply_for_China_Fellowship_as_well__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply for China Fellowship as well ?</label>
    <type>Checkbox</type>
</CustomField>