unpackaged/main/default/objects/Fellow_Application__c/fields/Areas_of_Interest_India__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest_India__c</fullName>
    <inlineHelpText>From Match Preference section of Portal</inlineHelpText>
    <label>Areas of Interest - India</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industrial efficiency</fullName>
            </value>
            <value>
                <fullName>Climate Commitments</fullName>
            </value>
            <value>
                <fullName>Climate smart food and agricultural systems</fullName>
            </value>
            <value>
                <fullName>Energy and waste management</fullName>
            </value>
            <value>
                <fullName>Sustainable construction</fullName>
            </value>
            <value>
                <fullName>Supply chain &amp; freight sustainability</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>