unpackaged/main/default/objects/Fellow_Application__c/fields/Areas_of_Interest_India_Sorted__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest_India_Sorted__c</fullName>
    <inlineHelpText>Shows data based on order selected by Applicant.</inlineHelpText>
    <label>Areas of Interest - India Sorted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>