unpackaged/main/default/objects/Fellow_Application__c/fields/Areas_of_Interest_Other__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest_Other__c</fullName>
    <label>Areas of Interest - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>