unpackaged/main/default/objects/Fellow_Application__c/fields/Availability_Additional__c.field-meta.xml
<CustomField>
    <fullName>Availability_Additional__c</fullName>
    <label>Availability Additional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>