unpackaged/main/default/objects/Fellow_Application__c/fields/Availability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_End_Date__c</fullName>
    <inlineHelpText>From Match Preference section on Portal</inlineHelpText>
    <label>Availability End Date</label>
    <type>Date</type>
</CustomField>