unpackaged/main/default/objects/Fellow_Application__c/fields/Availability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Availability_Start_Date__c</fullName>
    <inlineHelpText>From Match Preference section of Portal</inlineHelpText>
    <label>Availability Start Date</label>
    <type>Date</type>
</CustomField>