unpackaged/main/default/objects/Fellow_Application__c/fields/Car_other__c.field-meta.xml
<CustomField>
    <fullName>Car_other__c</fullName>
    <label>Car: other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>