unpackaged/main/default/objects/Fellow_Application__c/fields/Change_Agent_Score_old__c.field-meta.xml
<CustomField>
    <fullName>Change_Agent_Score_old__c</fullName>
    <formula>CASE(Scale_Energy_Experience__c, "3yrs plus", 3, "2-3yrs", 2, "1-2yrs", 1, 0) +

CASE(Scale_Relevant_Degree__c, "Graduate degree", 3, "Specialization or relevant course work", 2, "Undergraduate or light course work", 1, 0) +

CASE(Scale_Project_Mgmt_Consulting__c, "3yrs plus", 3, "2-3yrs", 2, "1-2yrs", 1, 0) +

CASE(Scale_Project_Type_Knowledge_Skillset__c, "Experienced", 1, 0) +  

CASE(Scale_Leadership__c, "Experienced", 1, 0) +

CASE(Scale_Written_Communication_Enthusiasm__c, "Superstar", 3, "Sufficient", 2, "Weak", 1,"Good/Great",1,0) +

CASE(Scale_Engineering_Technical__c, "Experienced",1,"Beginner", 1,"Intermediate",2,"Advanced",3,0)</formula>
    <label>Applicant Score Criteria_OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>