unpackaged/main/default/objects/Fellow_Application__c/fields/ChinaPassport__c.field-meta.xml
<CustomField>
    <fullName>ChinaPassport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChinaPassport</label>
    <type>Checkbox</type>
</CustomField>