unpackaged/main/default/objects/Fellow_Application__c/fields/Competing_Offer_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Competing_Offer_Deadline__c</fullName>
    <label>Competing Offer Deadline</label>
    <type>Date</type>
</CustomField>