unpackaged/main/default/objects/Fellow_Application__c/fields/Degree_Earned_2__c.field-meta.xml
<CustomField>
    <fullName>Degree_Earned_2__c</fullName>
    <label>UG Degree(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate of Applied Science (AAS)</fullName>
            </value>
            <value>
                <fullName>Associate of Arts (AA)</fullName>
            </value>
            <value>
                <fullName>Associate of Science (AS)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Arts (BA)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science (BS)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>