unpackaged/main/default/objects/Fellow_Application__c/fields/Desired_Industry__c.field-meta.xml
<CustomField>
    <fullName>Desired_Industry__c</fullName>
    <inlineHelpText>Choose up to three industry preferences</inlineHelpText>
    <label>Desired Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colleges and Universities</fullName>
            </value>
            <value>
                <fullName>Consumer packaged goods</fullName>
            </value>
            <value>
                <fullName>Energy and utilities</fullName>
            </value>
            <value>
                <fullName>Financial services and insurance</fullName>
            </value>
            <value>
                <fullName>Food services</fullName>
            </value>
            <value>
                <fullName>Government and public administration</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial goods and manufacturing</fullName>
            </value>
            <value>
                <fullName>Information technology services</fullName>
            </value>
            <value>
                <fullName>Non-profit</fullName>
            </value>
            <value>
                <fullName>Professional and technical services</fullName>
            </value>
            <value>
                <fullName>Real estate</fullName>
            </value>
            <value>
                <fullName>Religious organizations</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>School and school districts</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation and warehousing</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>