unpackaged/main/default/objects/Fellow_Application__c/fields/Desired_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Desired_Project_Type__c</fullName>
    <label>Desired Project Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Building Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Engagement and Behavior Change</fullName>
            </value>
            <value>
                <fullName>Sustainability/Energy  Strategy</fullName>
            </value>
            <value>
                <fullName>Clean and Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Data Analysis</fullName>
            </value>
            <value>
                <fullName>Financial Evaluation and Planning</fullName>
            </value>
            <value>
                <fullName>Freight and Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>