unpackaged/main/default/objects/Fellow_Application__c/fields/Do_you_identify_as_Latinx_or_Hispanic__c.field-meta.xml
<CustomField>
    <fullName>Do_you_identify_as_Latinx_or_Hispanic__c</fullName>
    <label>Do you identify as Latinx or Hispanic?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Prefer not to disclose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>