unpackaged/main/default/objects/Fellow_Application__c/fields/Experience_Greenhouse_Gas_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Experience_Greenhouse_Gas_Accounting__c</fullName>
    <label>Experience - Greenhouse Gas Accounting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>