unpackaged/main/default/objects/Fellow_Application__c/fields/Experience_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Experience_Supply_Chain__c</fullName>
    <label>Experience - Supply Chain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>