unpackaged/main/default/objects/Fellow_Application__c/fields/ExperienceAdvancedFinancialAnalysis__c.field-meta.xml
<CustomField>
    <fullName>ExperienceAdvancedFinancialAnalysis__c</fullName>
    <label>Experience - Financial Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>