unpackaged/main/default/objects/Fellow_Application__c/fields/ExperienceExtensiveExcelAataAnalysis__c.field-meta.xml
<CustomField>
    <fullName>ExperienceExtensiveExcelAataAnalysis__c</fullName>
    <label>Experience – Data Analysis (Excel/other)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>