unpackaged/main/default/objects/Fellow_Application__c/fields/ExperienceRenewables__c.field-meta.xml
<CustomField>
    <fullName>ExperienceRenewables__c</fullName>
    <label>Experience -Energy Efficiency/Renewables</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>