unpackaged/main/default/objects/Fellow_Application__c/fields/Fellowship_Applying_for__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Applying_for__c</fullName>
    <label>Fellowship Applying for?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Fellowship</fullName>
            </value>
            <value>
                <fullName>China Fellowship</fullName>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>