unpackaged/main/default/objects/Fellow_Application__c/fields/First_Generation_College_Student__c.field-meta.xml
<CustomField>
    <fullName>First_Generation_College_Student__c</fullName>
    <label>First-Generation College Student?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to disclose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>