unpackaged/main/default/objects/Fellow_Application__c/fields/Geographic_Flexibility__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Flexibility__c</fullName>
    <label>Geographic Flexibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I will go anywhere</fullName>
            </value>
            <value>
                <fullName>I can relocate to a couple of regional areas</fullName>
            </value>
            <value>
                <fullName>I can only relocate within a specific regional area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>